# lottiestudio

./: PROJECT_OVERVIEW.md  PROJECT_OVERVIEW_PROCESS.md  TESTING_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.jsx  MainLayout.jsx  ResizableLayout.jsx  StatusBar.jsx  TopMenuBar.jsx
src/components/assets/: AssetLibrary.jsx
src/components/canvas/: AlignDistribute.jsx  Canvas.jsx  CanvasControls.jsx  CanvasOverlay.jsx  CanvasRenderer.jsx  SnapGuides.jsx
src/components/color/: ColorPicker.jsx
src/components/easing/: EasingPanel.jsx  GraphEditor.jsx
src/components/export/: ExportModalFull.jsx  OptimizationInspector.jsx
src/components/gradient/: GradientEditor.jsx
src/components/import/: ImportLottieModal.jsx  ImportSVGModal.jsx
src/components/layers/: LayersPanel.jsx
src/components/modals/: AboutModal.jsx  ActiveModal.jsx  AssetLibraryModal.jsx  ExportModal.jsx  HelpModal.jsx  ImportSVGModal.jsx  NewProjectModal.jsx  OpenProjectModal.jsx  PreferencesModal.jsx  RecoveryModal.jsx  SaveProjectModal.jsx  ShortcutsModal.jsx
src/components/motionpath/: MotionPathPanel.jsx
src/components/onboarding/: WelcomeScreen.jsx
src/components/organic/: OrganicMotionPanel.jsx
src/components/panels/: AnimationPanel.jsx  (+5 more)
src/db/: index.js
src/engine/: project.js
src/lib/: tauriFS.js
src/stores/: colorStore.js  editorStore.js
src/types/: index.js
src/utils/: colorUtils.js
(+37 files in other folders)
